# fastapi-crud

./: .gitignore  Makefile  README.md  database.db  database.py  db.py  dependencies.py  main.py  models.py  pyproject.toml  repository.py
crud/: hero.py
models/: hero.py
src/: database.py  dependencies.py  main.py
src/config/: log_config.py  settings.py
src/crud/: auth_session.py  hero.py  team.py  user.py
src/models/: auth_session.py  hero.py  public.py  team.py  user.py
src/routers/: heroes.py  teams.py  users.py
src/security/: basic.py  oauth2.py  session.py  utils.py
src/templates/: base.html  home.html  login.html  profile.html
tests/: conftest.py  test_repository.py
tests/crud/: test_auth_session.py  test_hero.py  test_team.py
tests/routers/: test_heroes.py  test_teams.py  test_users.py
