[project]
name = "fastapi-crud"
version = "0.1.0"
description = "A FastAPI CRUD application with SQLModel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pytest>=8.3.5",
    "pytest-asyncio==1.0.0",
    "pytest-cov>=6.1.1",
    "sqlmodel>=0.0.24",
]
