[project]
name = "fastapi-crud"
version = "0.1.0"
description = "A FastAPI CRUD application with SQLModel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.3.5",
    "pytest-asyncio==1.0.0",
    "pytest-cov>=6.1.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "faker>=37.3.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
